--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "body-parser": "^1.17.2",
     "cors": "^2.8.4",
     "express": "^4.15.3",
+    "express-jwt": "^5.3.0",
     "fs-extra": "^4.0.0",
     "handlebars": "^4.0.10",
     "html-pdf": "^2.1.0",
+    "jsonwebtoken": "^7.4.1",
     "morgan": "^1.8.2",
     "mysql2": "^1.3.6",
     "ramda": "^0.24.1",
-    "sequelize": "^4.4.2"
+    "sequelize": "^4.4.2",
+    "sha.js": "^2.4.8"
   }
 }
