--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "express-jwt": "^5.3.0",
     "fs-extra": "^4.0.0",
     "handlebars": "^4.0.10",
-    "html-pdf": "^2.1.0",
+    "handlebars-pdf": "^1.0.1",
     "jsonwebtoken": "^7.4.1",
     "morgan": "^1.8.2",
     "mysql2": "^1.3.6",
