--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "handlebars": "^4.0.10",
     "handlebars-pdf": "^1.0.1",
     "jsonwebtoken": "^7.4.1",
+    "moment": "^2.22.1",
     "morgan": "^1.8.2",
     "mysql2": "^1.3.6",
     "ramda": "^0.24.1",
